--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "output-colorizer",
   "displayName": "Output Colorizer",
-  "description": "Syntax highlighting for log output",
+  "description": "Syntax highlighting for log files",
   "version": "0.0.12",
   "publisher": "IBM",
   "engines": {
