fix: add vscode tests and fixes from them

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,9 +12,9 @@
         "strict": true,                                 /* Enable all strict type-checking options. */
       },
       "include": [
-        "src"
+        "src",
       ],
       "exclude": [
-        "node_modules"
+        "node_modules", ".vscode-test"
       ],
 }
