--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,17 @@
             "args": [
                 "--extensionDevelopmentPath=${workspaceRoot}"
             ],
-        }
+        },
+        {
+			"name": "Run Client Extension Tests",
+			"type": "extensionHost",
+			"request": "launch",
+			"runtimeExecutable": "${execPath}",
+			"args": [
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--extensionTestsPath=${workspaceFolder}/client/out/test/suite/index"
+			],
+			"outFiles": ["${workspaceFolder}/client/out/test/**/*.js"]
+		}
     ]
 }
