--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,20 @@
     "engines": {
         "vscode": "^1.52.0"
     },
-    "scripts": {},
+    "scripts": {
+        "watch": "tsc -watch -p ./"
+    },
     "dependencies": {},
     "devDependencies": {
+        "@types/chai": "^4.2.21",
+        "@types/glob": "^7.1.4",
+        "@types/mocha": "^9.0.0",
         "@types/node": "^16.4.13",
-        "@types/vscode": "^1.59.0"
+        "@types/vscode": "^1.59.0",
+        "@vscode/test-electron": "^1.6.2",
+        "chai": "^4.3.4",
+        "glob": "^7.1.7",
+        "mocha": "^9.0.3",
+        "typescript": "^4.3.5"
     }
 }
