--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "onLanguage:Log"
     ],
     "scripts": {
-        "build": "tsc --build client"
+        "build": "tsc --build client",
+        "watch": "cd client && yarn watch"
     },
     "contributors": [
         {
